feat: add the create domain button in the category dropdown
Refs: oph-716

--- a/app/templates/inventory/admin.hbs
+++ b/app/templates/inventory/admin.hbs
@@ -65,6 +65,14 @@
               />
             </:action>
             <:default>
+              <Inventory::EditToolbar
+                @modelName="process-domain"
+                @createButtonText="Voeg domein toe"
+                @onCreateButtonClicked={{fn
+                  this.openCreateDomainModal
+                  category
+                }}
+              />
               {{#unless (eq this.categoryToRefresh.id category.id)}}
                 <Inventory::TableViewDomains @category={{category}} />
               {{/unless}}
