--- a/app/components/inventory/edit-toolbar.hbs
+++ b/app/components/inventory/edit-toolbar.hbs
@@ -1,47 +1,59 @@
 <AuToolbar @size="large" class="au-u-padding-none" as |Group|>
+  {{#if this.isCreateModel}}
+    <Group>
+      {{! Empty just for pushing create to the right }}
+    </Group>
+  {{/if}}
   <Group class="au-u-margin-bottom-none">
     {{#if this.isCreateModel}}
-      <AuButton @skin="naked" @icon="add" iconAlignment="right">
-        Voeg toe
+      <AuButton
+        @skin="naked"
+        @icon="add"
+        iconAlignment="left"
+        {{on "click" @onCreateButtonClicked}}
+      >
+        {{if @createButtonText @createButtonText "Voeg toe"}}
       </AuButton>
     {{/if}}
   </Group>
-  <Group>
-    {{#if this.isEditModel}}
-      <AuButtonGroup @inline={{true}}>
-        {{#if @model.isArchived}}
-          <AuButton
-            @icon="undo"
-            @skin="naked"
-            @hideText={{true}}
-            {{on "click" this.unarchiveModel}}
-          >Herstel</AuButton>
-        {{else}}
-          <AuButton
-            @icon="pencil"
-            @skin="naked"
-            @hideText={{true}}
-            {{on "click" this.openEditModal}}
-          >Pas aan</AuButton>
-          <AuButton
-            @icon="archive"
-            @skin="naked"
-            @hideText={{true}}
-            {{on "click" (fn (mut this.isArchiveModelOpen) true)}}
-          >Archiveer</AuButton>
-        {{/if}}
-        {{#unless true}}
-          <AuButton
-            @icon="bin"
-            @skin="naked"
-            @hideText={{true}}
-            @alert={{true}}
-            {{on "click" (fn (mut this.isDeleteModelOpen) true)}}
-          >Verwijder</AuButton>
-        {{/unless}}
-      </AuButtonGroup>
-    {{/if}}
-  </Group>
+  {{#unless this.isCreateModel}}
+    <Group>
+      {{#if this.isEditModel}}
+        <AuButtonGroup @inline={{true}}>
+          {{#if @model.isArchived}}
+            <AuButton
+              @icon="undo"
+              @skin="naked"
+              @hideText={{true}}
+              {{on "click" this.unarchiveModel}}
+            >Herstel</AuButton>
+          {{else}}
+            <AuButton
+              @icon="pencil"
+              @skin="naked"
+              @hideText={{true}}
+              {{on "click" this.openEditModal}}
+            >Pas aan</AuButton>
+            <AuButton
+              @icon="archive"
+              @skin="naked"
+              @hideText={{true}}
+              {{on "click" (fn (mut this.isArchiveModelOpen) true)}}
+            >Archiveer</AuButton>
+          {{/if}}
+          {{#unless true}}
+            <AuButton
+              @icon="bin"
+              @skin="naked"
+              @hideText={{true}}
+              @alert={{true}}
+              {{on "click" (fn (mut this.isDeleteModelOpen) true)}}
+            >Verwijder</AuButton>
+          {{/unless}}
+        </AuButtonGroup>
+      {{/if}}
+    </Group>
+  {{/unless}}
 </AuToolbar>
 
 <AuModal
