refactor: create category is also done by the edit-toolbar
Updated the styling of add domain button to match the other buttons

Refs: oph-716

--- a/app/components/inventory/edit-toolbar.hbs
+++ b/app/components/inventory/edit-toolbar.hbs
@@ -1,13 +1,8 @@
-<AuToolbar @size="large" class="au-u-padding-none" as |Group|>
-  {{#if this.isCreateModel}}
-    <Group>
-      {{! Empty just for pushing create to the right }}
-    </Group>
-  {{/if}}
-  <Group class="au-u-margin-bottom-none">
+<AuToolbar @size="large" class="au-u-padding-none" ...attributes as |Group|>
+  <Group class="au-u-margin-left-none">
     {{#if this.isCreateModel}}
       <AuButton
-        @skin="naked"
+        @skin="secondary"
         @icon="add"
         iconAlignment="left"
         {{on "click" @onCreateButtonClicked}}
