feat: use the label with status pill in the edit-toolbar
Refs: oph-716

--- a/app/components/inventory/edit-toolbar.hbs
+++ b/app/components/inventory/edit-toolbar.hbs
@@ -13,6 +13,7 @@
   </Group>
   {{#unless this.isCreateModel}}
     <Group>
+      <Inventory::LabelWithStatusPill @statusUri={{@model.status}} />
       {{#if this.isEditModel}}
         <AuButtonGroup @inline={{true}}>
           {{#if @model.isArchived}}
