refactor: make the pill a round circle with the correct color (not sure about it)
Refs: oph-716

--- a/app/components/inventory/edit-toolbar.hbs
+++ b/app/components/inventory/edit-toolbar.hbs
@@ -12,7 +12,7 @@
     {{/if}}
   </Group>
   {{#unless this.isCreateModel}}
-    <Group>
+    <Group class="au-u-flex au-u-flex--vertical-center">
       <Inventory::LabelWithStatusPill @statusUri={{@model.status}} />
       {{#if this.isEditModel}}
         <AuButtonGroup @inline={{true}}>
