--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -161,3 +161,10 @@ tr:hover .inventory-row-button-group .au-c-button {
     width: 25vw !important;
   }
 }
+
+.au-c-pill.round-pill {
+  height: 1rem !important;
+  min-height: 0px !important;
+  width: 1rem !important;
+  padding: 0.1rem 0.1rem 0 !important;
+}
