--- a/app/components/inventory/edit-toolbar.hbs
+++ b/app/components/inventory/edit-toolbar.hbs
@@ -34,7 +34,7 @@
               @icon="archive"
               @skin="naked"
               @hideText={{true}}
-              {{on "click" (fn (mut this.isArchiveModelOpen) true)}}
+              {{on "click" this.openArchiveModal}}
             >Archiveer</AuButton>
           {{/if}}
           {{#unless true}}
@@ -43,7 +43,7 @@
               @skin="naked"
               @hideText={{true}}
               @alert={{true}}
-              {{on "click" (fn (mut this.isDeleteModelOpen) true)}}
+              {{on "click" this.openDeleteModal}}
             >Verwijder</AuButton>
           {{/unless}}
         </AuButtonGroup>
@@ -104,10 +104,15 @@
   @closeModal={{fn (mut this.isArchiveModelOpen) false}}
 >
   <:title>Archiveren</:title>
-  <:body>Ben je zeker dat je
+  <:body>
+    {{#if this.usageMessage}}
+      <p class="au-u-margin-bottom">{{this.usageMessage}}</p>
+    {{/if}}
+    Ben je zeker dat je
     <span class="au-u-medium">{{@model.label}}</span>
     wil archiveren? Achteraf kan je deze nog altijd terug uit het archief
-    herstellen.</:body>
+    herstellen.
+  </:body>
   <:footer>
     <AuButtonGroup class="au-u-flex--end">
       <AuButton
@@ -115,9 +120,13 @@
         {{on "click" (fn (mut this.isArchiveModelOpen) false)}}
       >Annuleer</AuButton>
       <AuButton
-        @disabeld={{this.isArchiving}}
-        @loading={{this.isArchiving}}
-        @loadingMessage="Archiveren"
+        @disabeld={{or this.isArchiving this.isCheckingForUsage}}
+        @loading={{or this.isArchiving this.isCheckingForUsage}}
+        @loadingMessage={{if
+          this.isArchiving
+          "Archiveren"
+          "zoeken naar implementaties"
+        }}
         @alert={{true}}
         {{on "click" this.archiveModel}}
       >Archiveer</AuButton>
@@ -131,7 +140,11 @@
   @closeModal={{fn (mut this.isDeleteModelOpen) false}}
 >
   <:title>Verwijderen</:title>
-  <:body>Ben je zeker dat je
+  <:body>
+    {{#if this.usageMessage}}
+      <p class="au-u-margin-bottom">{{this.usageMessage}}</p>
+    {{/if}}
+    Ben je zeker dat je
     <span class="au-u-medium">{{@model.label}}</span>
     wil verwijderen?
   </:body>
@@ -142,9 +155,13 @@
         {{on "click" (fn (mut this.isDeleteModelOpen) false)}}
       >Annuleer</AuButton>
       <AuButton
-        @disabeld={{this.isDeleting}}
-        @loading={{this.isDeleting}}
-        @loadingMessage="Verwijderen"
+        @disabeld={{or this.isDeleting this.isCheckingForUsage}}
+        @loading={{or this.isDeleting this.isCheckingForUsage}}
+        @loadingMessage={{if
+          this.isArchiving
+          "Verwijderen"
+          "zoeken naar implementaties"
+        }}
         @skin="primary"
         @icon="bin"
         @alert="true"
