--- a/app/components/inventory/editable-group-row.hbs
+++ b/app/components/inventory/editable-group-row.hbs
@@ -48,7 +48,7 @@
             @icon="archive"
             @skin="naked"
             @size="large"
-            {{on "click" (fn (mut this.isArchiveModelOpen) true)}}
+            {{on "click" this.openArchiveModal}}
           />
         {{/if}}
         {{#unless true}}
@@ -57,7 +57,7 @@
             @skin="naked"
             @size="large"
             @alert={{true}}
-            {{on "click" (fn (mut this.isDeleteModelOpen) true)}}
+            {{on "click" this.openDeleteModal}}
           />
         {{/unless}}
       </AuButtonGroup>
@@ -71,7 +71,11 @@
   @closeModal={{fn (mut this.isDeleteModelOpen) false}}
 >
   <:title>Verwijder groep uit domein</:title>
-  <:body>Ben je zeker dat je de groep
+  <:body>
+    {{#if this.usageMessage}}
+      <p class="au-u-margin-bottom">{{this.usageMessage}}</p>
+    {{/if}}
+    Ben je zeker dat je de groep
     <span class="au-u-medium">{{@group.label}}</span>
     wil verwijderen uit het domein
     <span class="au-u-medium">{{@domain.label}}?</span></:body>
@@ -82,9 +86,13 @@
         {{on "click" (fn (mut this.isDeleteModelOpen) false)}}
       >Annuleer</AuButton>
       <AuButton
-        @disabeld={{this.isDeleting}}
-        @loading={{this.isDeleting}}
-        @loadingMessage="Verwijderen"
+        @disabeld={{or this.isDeleting this.isCheckingForUsage}}
+        @loading={{or this.isDeleting this.isCheckingForUsage}}
+        @loadingMessage={{if
+          this.isArchiving
+          "Verwijderen"
+          "zoeken naar implementaties"
+        }}
         @skin="primary"
         @icon="bin"
         @alert="true"
@@ -100,7 +108,11 @@
   @closeModal={{fn (mut this.isArchiveModelOpen) false}}
 >
   <:title>Archiveer deze groep</:title>
-  <:body>Ben je zeker dat je de groep
+  <:body>
+    {{#if this.usageMessage}}
+      <p class="au-u-margin-bottom">{{this.usageMessage}}</p>
+    {{/if}}
+    Ben je zeker dat je de groep
     <span class="au-u-medium">{{@group.label}}</span>
     wil archiveren? Achteraf kan je deze nog altijd terug uit het archief
     herstellen.</:body>
@@ -111,9 +123,13 @@
         {{on "click" (fn (mut this.isArchiveModelOpen) false)}}
       >Annuleer</AuButton>
       <AuButton
-        @disabeld={{this.isArchiving}}
-        @loading={{this.isArchiving}}
-        @loadingMessage="Archiveren"
+        @disabeld={{or this.isArchiving this.isCheckingForUsage}}
+        @loading={{or this.isArchiving this.isCheckingForUsage}}
+        @loadingMessage={{if
+          this.isArchiving
+          "Archiveren"
+          "zoeken naar implementaties"
+        }}
         @alert={{true}}
         {{on "click" this.archiveGroup}}
       >Archiveer</AuButton>
