oph-711 | Add filters to inventory page (#138)
* feat: create select-category component

Component created by @MartijnBogaert

Refs: oph-711

* feat: selected category id will be set in the url as a queryparam

Filter is not applied to the table content yet

Refs: oph-711

* feat: enable search on category filter

Refs: oph-711

* feat: create select-domain component

Component based on @MartijnBogaert component

Refs: oph-711

* feat: selected domain id will be set in the url as a queryParam

Filter is not applied to the table content yet

Refs: oph-711

* feat: create select-group component

Component based on @MartijnBogaert component

Refs: oph-711

* feat: selected group id will be set in the url as a queryParam

Filter is not applied to the table content yet

Refs: oph-711

* feat: create select-title component

Component based on @MartijnBogaert component

Refs: oph-711

* feat: hoofprocess title will added to the url as a queryParam

Filter is not applied to the table content yet

Refs: oph-711

* refactor: remove 'title' queryparam from the sidebar components

This is handled by the processTitle queryparam

Refs: oph-711

* feat: disable filters above so users cannot do invalid combinations

Refs: oph-711

* fix: do not add the key to the queryparams when the value is null

Refs: oph-711

* feat: pass on all params to the download link

- Disabled the download button when no results

Refs: oph-711

* fix: remove the size 999 for download all

Updated the endpoint that the size will not default to 20 when not set. This means we can remove the size when downloading all the processes

Refs: oph-711

* fix: no double process bar active line on inventory page

Refs: oph-711

* feat: when number filter is filled in it will be passed on to the table content filters

Refs: oph-711

* refactor: remove the disabled for selection of inventory process filters

Refs: oph-711

--- a/app/templates/inventory/index.hbs
+++ b/app/templates/inventory/index.hbs
@@ -1,7 +1,9 @@
 <SidebarContainer>
   <:sidebar>
-    <div class="au-c-sidebar">
-    </div>
+    <Inventory::SidebarFilters
+      @params={{@model.params}}
+      @onFilterApplied={{this.updateFilters}}
+    />
   </:sidebar>
   <:content>
     <PageHeader>
@@ -21,6 +23,7 @@
           >Nieuw proces</AuButton>
         {{/if}}
         <AuButton
+          @disabled={{eq @model.tableContent.content.length 0}}
           @skin="primary"
           @icon="download"
           iconAlignment="left"
@@ -167,8 +170,9 @@
               @skin="primary"
               @alert={{true}}
               {{on "click" (perform this.deleteInventoryProcess)}}
-            >Verwijderen</AuButton>
-
+            >
+              Verwijderen
+            </AuButton>
           </AuButtonGroup>
         </:footer>
       </AuModal>
@@ -180,5 +184,5 @@
   @isOpen={{this.isDownloadModalOpen}}
   @onClose={{fn (mut this.isDownloadModalOpen) false}}
   @onClickedDownloadButton={{fn (mut this.isDownloadModalOpen) false}}
-  @downloadOptions={{hash sort=this.sort page=this.page size=this.size}}
+  @downloadOptions={{@model.params}}
 />
