--- a/app/components/inventory/editable-group-row.hbs
+++ b/app/components/inventory/editable-group-row.hbs
@@ -73,7 +73,15 @@
   <:title>Verwijder groep uit domein</:title>
   <:body>
     {{#if this.usageMessage}}
-      <p class="au-u-margin-bottom">{{this.usageMessage}}</p>
+      <AuAlert
+        @title="Opgepast"
+        @skin="warning"
+        @icon="alert-triangle"
+        @size={{this.size}}
+        @closable={{false}}
+      >
+        {{this.usageMessage}}
+      </AuAlert>
     {{/if}}
     Ben je zeker dat je de groep
     <span class="au-u-medium">{{@group.label}}</span>
@@ -94,7 +102,7 @@
           "zoeken naar implementaties"
         }}
         @skin="primary"
-        @icon="bin"
+        @icon={{if this.usageMessage "alert-triangle" "bin"}}
         @alert="true"
         {{on "click" this.deleteGroupFromDomain}}
       >Verwijder</AuButton>
@@ -110,7 +118,15 @@
   <:title>Archiveer deze groep</:title>
   <:body>
     {{#if this.usageMessage}}
-      <p class="au-u-margin-bottom">{{this.usageMessage}}</p>
+      <AuAlert
+        @title="Opgepast"
+        @skin="warning"
+        @icon="alert-triangle"
+        @size={{this.size}}
+        @closable={{false}}
+      >
+        {{this.usageMessage}}
+      </AuAlert>
     {{/if}}
     Ben je zeker dat je de groep
     <span class="au-u-medium">{{@group.label}}</span>
@@ -130,6 +146,7 @@
           "Archiveren"
           "zoeken naar implementaties"
         }}
+        @icon={{if this.usageMessage "alert-triangle" null}}
         @alert={{true}}
         {{on "click" this.archiveGroup}}
       >Archiveer</AuButton>
