feat: add breadcrum navigation to sparql endpoint
Refs: oph-642

--- a/app/templates/sparql.hbs
+++ b/app/templates/sparql.hbs
@@ -1,5 +1,7 @@
 {{page-title "SPARQL"}}
+{{breadcrumb "SPARQL endpoint" route="sparql"}}
 
+<NavigationBar />
 <StaticPage>
   <div class="au-o-region-large">
     <div class="au-o-layout">
