refactor: rename hoofdprocess label to proces + verander to wijzig
Went over the gitbook feature passport and there was written that
```
In the design it says "hoofdproces" we are going to use "proces"
Make sure to change this everywhere
```

```
Note: in the design there is "veranderen" next to the process. But instead we will do the same "wijzig" as in the block of "algemene informatie".
```

Refs: oph-716

--- a/app/components/process/inventory-process-card.hbs
+++ b/app/components/process/inventory-process-card.hbs
@@ -24,7 +24,9 @@
                     @skin="naked"
                     {{on "click" this.openConceptModal}}
                     class="process-change-button"
-                  >Veranderen</AuButton>
+                  >
+                    Wijzig
+                  </AuButton>
                 {{else}}
                   <AuButton
                     @skin="secondary"
