--- a/app/components/inventory/sidebar-filters.hbs
+++ b/app/components/inventory/sidebar-filters.hbs
@@ -36,7 +36,7 @@
         />
       </div>
       <div>
-        <AuLabel for="filter-title">Hoofdproces</AuLabel>
+        <AuLabel for="filter-title">Proces</AuLabel>
         <Inventory::SelectTitle
           @id="filter-title"
           @selected={{@params.processTitle}}
