--- a/app/components/app-header.hbs
+++ b/app/components/app-header.hbs
@@ -1,32 +1,45 @@
-<AuMainHeader
-  @brandLink="https://www.vlaanderen.be/nl"
-  @homeRoute="index"
-  @appTitle={{config "appName"}}
->
-  {{#if this.currentSession.isAdmin}}
-    <li class="au-c-list-horizontal__item">
-      <ImpersonationMenu />
-    </li>
-  {{/if}}
-
-  <li class="au-c-list-horizontal__item">
-    {{#if this.session.isAuthenticated}}
-      <AuDropdown
-        @title={{this.userInfo}}
-        @buttonLabel="Account settings"
-        @alignment="right"
-        role="menu"
-      >
-
-        <AuLink @route="auth.switch" @icon="switch" role="menuitem">
-          Wissel van bestuurseenheid
-        </AuLink>
-        <AuLink @route="auth.logout" @icon="logout" role="menuitem">
-          Afmelden
-        </AuLink>
-      </AuDropdown>
-    {{else}}
-      <LoginButton @isCompact={{true}} />
+<div>
+  <AuMainHeader
+    @brandLink="https://www.vlaanderen.be/nl"
+    @homeRoute="index"
+    @appTitle={{config "appName"}}
+  >
+    {{#if this.currentSession.isAdmin}}
+      <li class="au-c-list-horizontal__item">
+        <ImpersonationMenu />
+      </li>
     {{/if}}
-  </li>
-</AuMainHeader>
+
+    <li class="au-c-list-horizontal__item">
+      {{#if this.session.isAuthenticated}}
+        <AuDropdown
+          @title={{this.userInfo}}
+          @buttonLabel="Account settings"
+          @alignment="right"
+          role="menu"
+        >
+
+          <AuLink @route="auth.switch" @icon="switch" role="menuitem">
+            Wissel van bestuurseenheid
+          </AuLink>
+          <AuLink @route="auth.logout" @icon="logout" role="menuitem">
+            Afmelden
+          </AuLink>
+        </AuDropdown>
+      {{else}}
+        <LoginButton @isCompact={{true}} />
+      {{/if}}
+    </li>
+  </AuMainHeader>
+  {{#if this.maintenanceEnabled}}
+    <div class="au-u-flex au-u-flex--column" id="content" tabindex="-1">
+      <AuAlert
+        @skin="warning"
+        @icon="alert-triangle"
+        class="au-u-margin-bottom-none au-c-env-announcement"
+      >
+        <p>{{this.maintenanceMessage}}</p>
+      </AuAlert>
+    </div>
+  {{/if}}
+</div>
