hack: the no scroll on the index page of the application
Doing it like this so the rest of the application can follow the normal styling

Refs: oph-717

--- a/app/styles/components/_c-home.scss
+++ b/app/styles/components/_c-home.scss
@@ -1,3 +1,12 @@
+.c-home--no-scroll {
+  height: 100%;
+  overflow-y: scroll;
+
+  @include mq(medium) {
+    display: contents;
+  }
+}
+
 .c-home {
   display: flex;
   flex-direction: column;
