--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,5 @@
-<LayoutHome>
-  <AuBodyContainer class="au-u-background-gray-100">
+<div class="c-home--no-scroll">
+  <AuBodyContainer class="au-u-background-gray-100 au-o-region-large">
     <section class="c-home">
       <div class="au-o-flow">
         <AuContent>
@@ -194,4 +194,5 @@
       </div>
     </section>
   </AuBodyContainer>
-</LayoutHome>
+  <Footer />
+</div>
