feat: add helptext under the searchfield
This so the user knows that not all results of ipdc products will show

Refs: oph-730

--- a/app/components/process-select-by-ipdc.hbs
+++ b/app/components/process-select-by-ipdc.hbs
@@ -13,4 +13,5 @@
     {{language-string-set-nl ipdcProduct.name}}
     ({{ipdcProduct.productNumber}})
   </PowerSelectMultiple>
+  <AuHelpText @skin="secondary">Toont enkel producten gelinkt aan een proces</AuHelpText>
 </div>
