--- a/app/templates/inventory/index.hbs
+++ b/app/templates/inventory/index.hbs
@@ -19,7 +19,7 @@
             @skin="secondary"
             @icon="add"
             iconAlignment="left"
-            {{on "click" this.addNewInventoryProcess}}
+            {{on "click" (fn this.openUpsertModal null)}}
           >Nieuw proces</AuButton>
         {{/if}}
         <AuButton
@@ -56,129 +56,30 @@
             <InventoryProcessTableRow
               @process={{conceptualProcess}}
               @labels={{@model.tableContent.headerLabels}}
-              @onEditInventoryProcess={{this.editInventoryProcess}}
+              @onEditInventoryProcess={{this.openUpsertModal}}
               @onOpenDeleteModal={{this.openDeleteModal}}
             />
           </c.body>
         </t.content>
       </AuDataTable>
     {{/if}}
-    {{#if this.isModalOpen}}
-      <form {{on "submit" (perform this.saveInventoryProcess)}}>
-        <AuModal
-          @modalOpen={{this.isModalOpen}}
-          @closeModal={{this.closeModal}}
-        >
-          <:title>{{if
-              this.isEditing
-              "Bewerk inventaris proces"
-              "Voeg nieuw inventaris proces toe"
-            }}</:title>
-          <:body>
-
-            <AuLabel>Titel</AuLabel>
-            <AuInput
-              @width="block"
-              value={{this.currentProcess.title}}
-              {{on "input" this.setTitle}}
-            />
-
-            <AuLabel class="au-u-margin-top">Procesgroep</AuLabel>
-            <PowerSelect
-              @placeholder="Selecteer een groep"
-              @onChange={{this.handleProcessGroupChange}}
-              @options={{this.availableGroups}}
-              @selected={{this.processGroup}}
-              @searchEnabled={{true}}
-              @searchField="label"
-              as |group|
-            >
-              {{group.label}}
-            </PowerSelect>
-
-            <AuLabel class="au-u-margin-top">Procesdomein</AuLabel>
-            <PowerSelect
-              @placeholder="Selecteer een domein"
-              @onChange={{this.handleProcessDomainChange}}
-              @options={{this.availableDomains}}
-              @selected={{this.processDomain}}
-              @searchEnabled={{true}}
-              @searchField="label"
-              as |domain|
-            >
-              {{domain.label}}
-            </PowerSelect>
-
-            <AuLabel class="au-u-margin-top">Procescategorie</AuLabel>
-            <PowerSelect
-              @placeholder="Selecteer een categorie"
-              @onChange={{this.handleProcessCategoryChange}}
-              @options={{this.categories}}
-              @selected={{this.processCategory}}
-              @searchEnabled={{true}}
-              @searchField="label"
-              as |category|
-            >
-              {{category.label}}
-            </PowerSelect>
-
-          </:body>
-          <:footer>
-            <AuButtonGroup class="au-u-flex--end">
-              {{#if this.showResetButton}}
-                <AuButton
-                  @skin="naked"
-                  @icon="redo"
-                  {{on "click" this.clearSelections}}
-                >
-                  Herstel keuzes</AuButton>
-              {{/if}}
-              <AuButton
-                @skin="secondary"
-                {{on "click" this.closeModal}}
-              >Annuleer</AuButton>
-              <AuButton
-                @skin="primary"
-                @disabled={{not this.canSave}}
-                {{on "click" (perform this.saveInventoryProcess)}}
-              >Opslaan</AuButton>
-
-            </AuButtonGroup>
-          </:footer>
-        </AuModal>
-      </form>
-    {{/if}}
-
-    {{#if this.isDeleteModalOpen}}
-      <AuModal
-        @modalOpen={{this.isDeleteModalOpen}}
-        @closeModal={{this.closeModal}}
-      >
-        <:title>Verwijder proces</:title>
-        <:body>
-          Weet u zeker dat u het proces
-          <strong>{{this.processToDelete.title}}</strong>
-          wilt verwijderen?
-        </:body>
-        <:footer>
-          <AuButtonGroup class="au-u-flex--end">
-            <AuButton
-              @skin="naked"
-              {{on "click" this.closeModal}}
-            >Annuleer</AuButton>
-            <AuButton
-              @skin="primary"
-              @alert={{true}}
-              {{on "click" (perform this.deleteInventoryProcess)}}
-            >
-              Verwijderen
-            </AuButton>
-          </AuButtonGroup>
-        </:footer>
-      </AuModal>
-    {{/if}}
   </:content>
 </SidebarContainer>
+
+{{#if this.isUpsertModalOpen}}
+  <Inventory::UpsertProcessModal
+    @process={{this.process}}
+    @onProcessSaved={{this.onProcessSaved}}
+    @onClose={{this.onCloseUpsertModal}}
+  />
+{{/if}}
+
+<Inventory::DeleteProcessModal
+  @isOpen={{this.isDeleteModalOpen}}
+  @process={{this.process}}
+  @onProcessDeleted={{this.onProcessDeleted}}
+  @onClose={{this.onCloseDeleteModal}}
+/>
 
 <DownloadModal::InventoryProcesses
   @isOpen={{this.isDownloadModalOpen}}
