oph 716 archive category domain group usage check (#139)
* feat: hide the delete button for groups of a domain on admin page

Refs: oph-716

* feat: create a edit-toolbar component for process-category & domain

This is the idea for now I added this toolbar for the category

Refs: oph-716

* refactor: replace new domain button with the edit-toolbar

TODO:
- extend the toolbar with a create button
- Also use this toolbar for domains

Refs: oph-716

* feat: add labels to the action buttons but hide the text

Refs: oph-716

* feat: use the edit-toolbar for domains aswell

Domains are refreshed when one is removed

Refs: oph-716

* feat: edit-toolbar can also update the label

Refs: oph-716

* feat: add the create domain button in the category dropdown

Refs: oph-716

* refactor: create category is also done by the edit-toolbar

Updated the styling of add domain button to match the other buttons

Refs: oph-716

* feat: create label with status pill component

Can add a label or a statusUri of both

Refs: oph-716

* feat: use the label with status pill in the edit-toolbar

Refs: oph-716

* refactor: make the pill a round circle with the correct color (not sure about it)

Refs: oph-716

* feat: add process-api call to check usage

When we want to delete or archive we have to check the usage

Refs: oph-716

* feat: also check the edit group row on usage

Would like to use the toolbar in here but as the data is harder to do I'll leave it as is

Refs: oph-716

* feat: do not check usage with service but with util method through ember store

Doing it like this as we have all the information to specifically search for the used model in the frontend and not in the backend service.

Refs: oph-716

* refactor: create a conceptual-process service that will do the util method

- Removed the util as we need the store, don't like it passing it on
- Use the service in both places so they do the same logic

Refs: oph-716

* refactor: remove the status pill on the admin page

Refs: oph-

--- a/app/components/inventory/editable-group-row.hbs
+++ b/app/components/inventory/editable-group-row.hbs
@@ -48,16 +48,18 @@
             @icon="archive"
             @skin="naked"
             @size="large"
-            {{on "click" (fn (mut this.isArchiveModelOpen) true)}}
+            {{on "click" this.openArchiveModal}}
           />
         {{/if}}
-        <AuButton
-          @icon="bin"
-          @skin="naked"
-          @size="large"
-          @alert={{true}}
-          {{on "click" (fn (mut this.isDeleteModelOpen) true)}}
-        />
+        {{#unless true}}
+          <AuButton
+            @icon="bin"
+            @skin="naked"
+            @size="large"
+            @alert={{true}}
+            {{on "click" this.openDeleteModal}}
+          />
+        {{/unless}}
       </AuButtonGroup>
     {{/if}}
   </div>
@@ -69,7 +71,19 @@
   @closeModal={{fn (mut this.isDeleteModelOpen) false}}
 >
   <:title>Verwijder groep uit domein</:title>
-  <:body>Ben je zeker dat je de groep
+  <:body>
+    {{#if this.usageMessage}}
+      <AuAlert
+        @title="Opgepast"
+        @skin="warning"
+        @icon="alert-triangle"
+        @size={{this.size}}
+        @closable={{false}}
+      >
+        {{this.usageMessage}}
+      </AuAlert>
+    {{/if}}
+    Ben je zeker dat je de groep
     <span class="au-u-medium">{{@group.label}}</span>
     wil verwijderen uit het domein
     <span class="au-u-medium">{{@domain.label}}?</span></:body>
@@ -80,11 +94,15 @@
         {{on "click" (fn (mut this.isDeleteModelOpen) false)}}
       >Annuleer</AuButton>
       <AuButton
-        @disabeld={{this.isDeleting}}
-        @loading={{this.isDeleting}}
-        @loadingMessage="Verwijderen"
+        @disabeld={{or this.isDeleting this.isCheckingForUsage}}
+        @loading={{or this.isDeleting this.isCheckingForUsage}}
+        @loadingMessage={{if
+          this.isArchiving
+          "Verwijderen"
+          "zoeken naar implementaties"
+        }}
         @skin="primary"
-        @icon="bin"
+        @icon={{if this.usageMessage "alert-triangle" "bin"}}
         @alert="true"
         {{on "click" this.deleteGroupFromDomain}}
       >Verwijder</AuButton>
@@ -98,7 +116,19 @@
   @closeModal={{fn (mut this.isArchiveModelOpen) false}}
 >
   <:title>Archiveer deze groep</:title>
-  <:body>Ben je zeker dat je de groep
+  <:body>
+    {{#if this.usageMessage}}
+      <AuAlert
+        @title="Opgepast"
+        @skin="warning"
+        @icon="alert-triangle"
+        @size={{this.size}}
+        @closable={{false}}
+      >
+        {{this.usageMessage}}
+      </AuAlert>
+    {{/if}}
+    Ben je zeker dat je de groep
     <span class="au-u-medium">{{@group.label}}</span>
     wil archiveren? Achteraf kan je deze nog altijd terug uit het archief
     herstellen.</:body>
@@ -109,9 +139,14 @@
         {{on "click" (fn (mut this.isArchiveModelOpen) false)}}
       >Annuleer</AuButton>
       <AuButton
-        @disabeld={{this.isArchiving}}
-        @loading={{this.isArchiving}}
-        @loadingMessage="Archiveren"
+        @disabeld={{or this.isArchiving this.isCheckingForUsage}}
+        @loading={{or this.isArchiving this.isCheckingForUsage}}
+        @loadingMessage={{if
+          this.isArchiving
+          "Archiveren"
+          "zoeken naar implementaties"
+        }}
+        @icon={{if this.usageMessage "alert-triangle" null}}
         @alert={{true}}
         {{on "click" this.archiveGroup}}
       >Archiveer</AuButton>
