--- a/app/templates/inventory/admin.hbs
+++ b/app/templates/inventory/admin.hbs
@@ -32,23 +32,13 @@
         </AuHeading>
       </Group>
     </AuToolbar>
-    <AuToolbar
-      @size="large"
-      class="au-u-padding-bottom-none au-u-margin-bottom-none"
-      as |Group|
-    >
-      <Group class="au-u-margin-bottom-none">
-        <AuButton
-          @skin="secondary"
-          @icon="add"
-          iconAlignment="left"
-          {{on "click" (fn (mut this.isNewCategoryModalOpen) true)}}
-        >
-          Nieuwe categorie
-        </AuButton>
-      </Group>
-    </AuToolbar>
     <div class="au-o-box">
+      <Inventory::EditToolbar
+        class="au-u-margin-left-small"
+        @modelName="process-category"
+        @createButtonText="Nieuwe categorie"
+        @onCreateButtonClicked={{fn (mut this.isNewCategoryModalOpen) true}}
+      />
       {{#each @model.categories as |category|}}
         <section id={{category.id}}>
           <CollapsibleContainer
@@ -59,16 +49,21 @@
           >
             <:title>{{category.label}}</:title>
             <:action>
-              <AuButton
-                @skin="naked"
-                @icon="add"
-                iconAlignment="left"
-                {{on "click" (fn this.openCreateDomainModal category)}}
-              >
-                Nieuw domein
-              </AuButton>
+              <Inventory::EditToolbar
+                @modelName="process-category"
+                @model={{category}}
+              />
             </:action>
             <:default>
+              <Inventory::EditToolbar
+                class="au-u-margin-bottom"
+                @modelName="process-domain"
+                @createButtonText="Nieuwe domein"
+                @onCreateButtonClicked={{fn
+                  this.openCreateDomainModal
+                  category
+                }}
+              />
               {{#unless (eq this.categoryToRefresh.id category.id)}}
                 <Inventory::TableViewDomains @category={{category}} />
               {{/unless}}
