--- a/app/components/process-select-by-ipdc.hbs
+++ b/app/components/process-select-by-ipdc.hbs
@@ -1,7 +1,7 @@
 <div class={{if @error "ember-power-select--error"}} ...attributes>
   <PowerSelectMultiple
     @searchEnabled={{true}}
-    @searchField="name"
+    @searchField="searchKeys"
     @loadingMessage="Aan het laden..."
     @noMatchesMessage="Geen resultaten"
     @options={{this.ipdcProducts}}
@@ -10,6 +10,8 @@
     @triggerId={{@id}}
     as |ipdcProduct|
   >
-    {{ipdcProduct.name}}
+    {{language-string-set-nl ipdcProduct.name}}
+    ({{ipdcProduct.productNumber}})
   </PowerSelectMultiple>
+  <AuHelpText @skin="secondary">Toont enkel producten gelinkt aan een proces</AuHelpText>
 </div>
